--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ junit = "4.13.2"
 kotlin = "2.0.21"
 precompose = "1.7.0-alpha03"
 koin = "4.0.0"
+sublime-fuzzy-search = "2.3.4"
 
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
@@ -109,6 +110,8 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
+
+sublime-fuzzy-search = { module = "com.github.android-password-store:sublime-fuzzy", version.ref = "sublime-fuzzy-search"}
 
 multiplatform-paths = { module = "me.sujanpoudel.multiplatform.utils:multiplatform-paths", version.ref = "multiplatform-paths"}
 precompose = { module = "moe.tlaster:precompose", version.ref = "precompose"}
