--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistPermissions = "0.31.2-alpha"
-agp = "8.7.2"
+agp = "8.9.0"
 amplifyframeworkAwsAuthCognito = "2.16.0"
 android-compileSdk = "35"
 android-minSdk = "25"
@@ -16,9 +16,11 @@ androidx-compose = "1.7.5"
 androidx-test-junit = "1.2.1"
 authCognito = "2.0.0"
 authenticator = "1.2.0"
+cardEntry = "1.6.6"
 compose-plugin = "1.6.11"
 amplify-core = "2.24.0"
 coil = "3.0.4"
+converterMoshi = "2.11.0"
 desugar_jdk_libs = "2.1.2"
 junit = "4.13.2"
 kotlin = "2.0.21"
@@ -31,8 +33,11 @@ lifecycleRuntimeKtx = "2.8.7"
 logback = "1.5.8"
 ktor-tests = "2.3.9"
 
+loggingInterceptor = "5.0.0-alpha.14"
 mapsCompose = "2.11.4"
 material = "1.4.3"
+moshiKotlin = "1.15.2"
+moshiKotlinCodegen = "1.15.2"
 navigation-compose = "2.8.3"
 exposed = "0.53.0"
 mariadb = "3.5.0"
@@ -46,6 +51,7 @@ aws-kotlin = "1.4.16"
 playServicesLocation = "21.3.0"
 playServicesMaps = "19.1.0"
 playServicesMapsVersion = "18.0.0"
+roomCompiler = "2.6.1"
 squareSdkVersion = "2.0.0-beta5"
 core-splashscreen = "1.0.1"
 
@@ -59,8 +65,8 @@ uiTestJunit4 = "1.7.8"
 uiTestManifest = "1.7.8"
 uiToolingPreview = "1.4.3"
 core = "1.13.0"
-roomCompiler = "2.6.1"
 uiTestJunit4Android = "1.7.8"
+composeBom = "2024.09.00"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -68,8 +74,13 @@ androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtim
 androidx-material-v143 = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "uiTestManifest" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomCompiler" }
 androidx-ui-tooling-preview-v143 = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 androidx-ui-v143 = { module = "androidx.compose.ui:ui", version.ref = "ui" }
+card-entry = { module = "com.squareup.sdk.in-app-payments:card-entry", version.ref = "cardEntry" }
+com-squareup-moshi-moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
+converter-moshi = { module = "com.squareup.retrofit2:converter-moshi" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -108,6 +119,12 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 
 
 
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
+moshi = { module = "com.squareup.moshi:moshi" }
+moshi-adapters = { module = "com.squareup.moshi:moshi-adapters" }
+moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
+moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen" }
+okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
@@ -152,9 +169,15 @@ mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squa
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
 
 androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
-androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompiler" }
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
 ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "uiTestJunit4" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+retrofit2-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi" }
+squareup-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
+squareup-moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -168,3 +191,4 @@ kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", versio
 
 
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
