--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,6 +57,8 @@ connectivity = "1.2.0"
 ui = "1.4.3"
 uiToolingPreview = "1.4.3"
 core = "1.13.0"
+firebaseFirestoreKtx = "25.1.3"
+uiTestJunit4Android = "1.7.8"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -146,6 +148,8 @@ mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squa
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
 
 androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
