--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -58,6 +58,10 @@ ui = "1.4.3"
 uiToolingPreview = "1.4.3"
 core = "1.13.0"
 
+volley = "1.2.1"
+places = "3.3.0"
+testng = "6.9.6"
+
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
@@ -67,6 +71,8 @@ androidx-ui-v143 = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
+volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
+places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places"}
 
 #cognito
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
@@ -146,6 +152,7 @@ mockreader-ui = { module = "com.squareup.sdk:mockreader-ui", version.ref = "squa
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core-splashscreen" }
 
 androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
+testng = { group = "org.testng", name = "testng", version.ref = "testng" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
