--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,11 +18,13 @@ androidx-test-junit = "1.2.1"
 authCognito = "2.0.0"
 authenticator = "1.2.0"
 cardEntry = "1.6.6"
+comGoogleAndroidGmsPlayServicesMaps = "18.1.0"
 compose-plugin = "1.6.11"
 amplify-core = "2.24.0"
 coil = "3.0.4"
 converterMoshi = "2.11.0"
 desugar_jdk_libs = "2.1.2"
+googlePlayServicesMapsVersion = "18.2.0"
 junit = "4.13.2"
 kotlin = "2.0.21"
 sublime-fuzzy-search = "2.3.4"
@@ -78,6 +80,7 @@ junit-jupiter = "5.8.1"
 volley = "1.2.1"
 places = "3.3.0"
 testng = "6.9.6"
+googlePlayServicesMaps = "19.2.0"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -97,6 +100,8 @@ amplify-ios = { module = "com.amplifyframework:amplify-ios", version.ref = "ampl
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
+play-services-maps-v1810 = { module = "com.google.android.gms:play-services-maps", version.ref = "comGoogleAndroidGmsPlayServicesMaps" }
+play-services-maps-v1820 = { module = "com.google.android.gms:play-services-maps", version.ref = "googlePlayServicesMapsVersion" }
 sublime-fuzzy-search = { module = "com.github.android-password-store:sublime-fuzzy", version.ref = "sublime-fuzzy-search"}
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places"}
@@ -197,6 +202,7 @@ squareup-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", 
 squareup-moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen" }
 androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "googlePlayServicesMaps" }
 
 
 [plugins]
