--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistPermissions = "0.31.2-alpha"
-agp = "8.7.3"
+agp = "8.9.1"
 amplifyframeworkAwsAuthCognito = "2.16.0"
 amplifyIos = "1.0.0"
 android-compileSdk = "35"
@@ -27,12 +27,11 @@ desugar_jdk_libs = "2.1.2"
 googlePlayServicesMapsVersion = "18.2.0"
 junit = "4.13.2"
 kotlin = "2.0.21"
+kotlinxDatetime = "0.6.2"
 sublime-fuzzy-search = "2.3.4"
 
 kotlinBom = "provider"
 kotlinx-coroutines = "1.9.0"
-kotlinx-serialization = "1.7.3"
-kotlinx-datetime = "0.6.2"
 ktor = "3.0.1"
 lifecycleRuntimeKtx = "2.8.7"
 logback = "1.5.8"
@@ -41,6 +40,8 @@ ktor-tests = "2.3.9"
 loggingInterceptor = "5.0.0-alpha.14"
 mapsCompose = "2.11.4"
 material = "1.4.3"
+mockitoCore = "x.x.x"
+mockk = "4.0.0)"
 moshiKotlin = "1.15.2"
 moshiKotlinCodegen = "1.15.2"
 navigation-compose = "2.8.3"
@@ -53,10 +54,13 @@ composeMaterial = "1.4.0"
 material3Android = "1.3.1"
 navigationRuntimeKtx = "2.8.3"
 aws-kotlin = "1.4.16"
+placesKtx = "3.3.1"
 playServicesLocation = "21.3.0"
 playServicesMaps = "19.1.0"
 playServicesMapsVersion = "18.0.0"
 roomCompiler = "2.6.1"
+rules = "1.6.1"
+runner = "1.5.0"
 squareSdkVersion = "2.0.0-beta5"
 core-splashscreen = "1.0.1"
 
@@ -74,9 +78,8 @@ firebaseFirestoreKtx = "25.1.3"
 uiTestJunit4Android = "1.7.8"
 composeBom = "2025.03.01"
 lifecycleViewmodelAndroid = "2.8.7"
+compiler = "3.2.0-alpha11"
 junit-jupiter = "5.8.1"
-
-
 volley = "1.2.1"
 places = "3.3.0"
 testng = "6.9.6"
@@ -85,8 +88,13 @@ googlePlayServicesMaps = "19.2.0"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
+androidx-compose-ui-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
+androidx-espresso-core = { module = "androidx.test.espresso:espresso-core" }
+androidx-junit = { module = "androidx.test.ext:junit" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-material-v143 = { module = "androidx.compose.material:material", version.ref = "material" }
+androidx-rules = { module = "androidx.test:rules", version.ref = "rules" }
+androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "uiTestManifest" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
@@ -96,11 +104,14 @@ androidx-ui-v143 = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 card-entry = { module = "com.squareup.sdk.in-app-payments:card-entry", version.ref = "cardEntry" }
 com-squareup-moshi-moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi" }
+core = { module = "androidx.test:core" }
+jetbrains-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom" }
 kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "kotlinBom" }
 amplify-ios = { module = "com.amplifyframework:amplify-ios", version.ref = "amplifyIos" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 play-services-maps-v1810 = { module = "com.google.android.gms:play-services-maps", version.ref = "comGoogleAndroidGmsPlayServicesMaps" }
 play-services-maps-v1820 = { module = "com.google.android.gms:play-services-maps", version.ref = "googlePlayServicesMapsVersion" }
 sublime-fuzzy-search = { module = "com.github.android-password-store:sublime-fuzzy", version.ref = "sublime-fuzzy-search"}
@@ -120,7 +131,6 @@ aws-cognitoidentity = { module = "aws.sdk.kotlin:cognitoidentity", version.ref =
 #androidx
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-espresso-core" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 #androidx-wear-compose-material = { module = "androidx.wear.compose:compose-material", version.ref = "composeMaterial" }
 androidx-compose-material = { module= "androidx.compose.material:material", version.ref = "androidx-compose" }
@@ -142,11 +152,17 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 
 
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 moshi = { module = "com.squareup.moshi:moshi" }
 moshi-adapters = { module = "com.squareup.moshi:moshi-adapters" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen" }
 okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+places-ktx = { module = "com.google.maps.android:places-ktx", version.ref = "placesKtx" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 play-services-maps-v1800 = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMapsVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
@@ -179,7 +195,6 @@ exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "e
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed"}
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed"}
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed"}
-kotlinx-datetime = {module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime"}
 mariadb-jdbc =  { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariadb" }
 jbcrypt = { module = "org.mindrot:jbcrypt", version.ref = "jbcrypt"}
 acme4j = { module = "org.shredzone.acme4j:acme4j-client", version.ref="acme4j"}
@@ -202,10 +217,10 @@ retrofit2-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi" 
 squareup-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
 squareup-moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen" }
 androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
+ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
+androidx-compiler = { group = "androidx.databinding", name = "compiler", version.ref = "compiler" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
 androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
-play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "googlePlayServicesMaps" }
-
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
