--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx2048M
 
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Djdk.attach.allowAttachSelf=true
 
 #Android
 android.nonTransitiveRClass=true
@@ -11,3 +11,4 @@ android.useAndroidX=true
 
 #Ktor
 io.ktor.development=true
+
